Sigil 0.7.1 TBD
    - Implement issue 2009: Add semantic tags to filenames in reports.
    - Implement issue 2028: Special characters should work in non-html files.
    - Implement issue 2027: Upgrade boost software.
    - Fix issue 2016: Find with wrap off and All HTML Files still wraps on last file.
    - Fix issue 2001: Spellcheck does not always highlight a word the first time.
    - Fix issue 2017: Clips pasted into some windows does not work correctly.
    - Fix issue 2008: Index adds extra comma in some cases.

Sigil 0.7.0 2013.02.17
    - Implement issue 1983: Set the tooltips of files in Book Browser to the filename.
    - Implement issue 1965: Allow opening files that are missing container.xml.
    - Implement issue 1975: HTML TOC and Index should use CSS files instead of inline stylesheet.
    - Implement issue 1968: Bookmark location in editing window.
    - Implement issue 1963: Table Of Contents window should default to expanded when opened or refreshed.
    - Implement issue 1953: Allow entering a list of new words into dictionary preferences.
    - Implement issue 1952: Add shortcut for Copy HTML file.
    - Implement issue 1951: Doubleclick on Image Report file should find next use of image.
    - Implement issue 1949: Add support for multiple active user dictionaries.
    - Implement issue 1947: Spellcheck dialog to manage all misspelled words at once.
    - Implement issue 62: Add document's css styles to menu.
    - Implement issue 1945: Allow editing of CSS while displaying page.
    - Implement issue 1661: Report list of all different characters in the book.
    - Implement issue 1746: Add Report for Links and Footnotes.
    - Implement issue 1941: Add Find & Replace option to wrap or not wrap searches.
    - Implement issue 1940: Update Insert Image to Insert File to support insert of audio/video.
    - Implement issue 1938: Update Delete Image files to Delete Media files to include audio/video.